# image_enhancement_app

./: .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/models/: image_enhance.py  model_configs.yaml  worker.py
src/models/mlwnet/: MLWNet_arch.py  wavelet_block.py
src/models/nafnet/: NAFNet_arch.py  local_arch.py
src/models/real_esrgan/: generator.py
src/models/scunet/: model.py
src/models/weights/: README.md
src/services/bot/: .env_example  bot.py  config_reader.py
src/services/bot/handlers/: predict_router.py
src/services/fastapi/: main.py
src/services/fastapi/predict/: router.py
src/services/fastapi_app/: Dockerfile  main.py  requirements.txt
src/services/fastapi_app/predict/: bridge.py  router.py
src/services/fastapi_app/telegram_bot/: bot.py
src/services/fastapi_app/telegram_bot/handlers/: keyboards.py  predict_router.py
src/services/streamlit/: Dockerfile  enhance_page.py  start_page.py
src/services/streamlit_app/: enhance_page.py  main.py  requirements.txt
