[tool.poetry]
name = "image_enchancement_app"
version = "0.1.0"
description = ""
authors = ["vladparh"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "2.0.0"
torch = {version = "^2.5.1+cu121", source = "pytorch-gpu"}
torchvision = {version = "^0.20.1", source = "pytorch-gpu"}
bestconfig = "^1.3.6"
torchinfo = "^1.8.0"
fastapi = "^0.115.12"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
aiogram = "^3.19.0"
pydantic-settings = "^2.8.1"
pywavelets = "1.6.0"
einops = "^0.8.1"
streamlit = "^1.44.1"
streamlit-image-comparison = "^0.0.4"
ptflops = "^0.7.4"
timm = "^1.0.15"



[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
mlflow = "^2.20.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
